# real-state-scraper-engine

./: .gitignore  .pre-commit-config.yaml  README.md  mercadolibrerealstatescraper.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt  utils.py
.github/workflows/: python-app.yml
real_state_scraper_engine/: main.py  mercadolibrerealstatescraper.py  utils.py
tests/: test_mercadolibrerealstatescraper.py
