[tool.poetry]
name = "real-state-scraper-engine"
version = "0.1.0"
description = "Fetchs real state data of Mexico from Merdaco Libre site"
authors = ["Francisco Mendoza <mentofran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.3.4"
pydantic = "^2.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.0"
mypy = "^1.10.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
