[tool.poetry]
name = "real-state-scraper-engine"
version = "0.1.0"
description = "Fetchs real state data of Mexico from Merdaco Libre site"
authors = ["Francisco Mendoza <mentofran@gmail.com>"]
readme = "README.md"

# [tool.poetry.scripts]
# real-state-scraper-engine = "real_state_scraper_engine.main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.3.4"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.0"
mypy = "^1.10.1"
ipykernel = "^6.29.5"

Pygments = ">=2.10.0"
black = ">=21.10b0"
darglint = ">=1.8.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pyupgrade = ">=2.29.1"

safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["*/site-packages"]

[tool.coverage.run]
branch = true
source = ["real_state_scraper_engine"]

[tool.coverage.report]
show_missing = true # display of line numbers for missing coverage
# fail_under = 100 # minimum coverage percentage
